packages/dkube-cicd-controller/dkube_cicd_controller-0.5.0-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.whl/dkube_cicd_controller/manifests/tekton-dashboard-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cicd-webhook
  namespace: tekton-pipelines
spec:
  gateways:
  - dkube/dkube-istio-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /cicd/webhook
    rewrite:
      uri: /
    route:
    - destination:
        host: el-git-listener-interceptor.dkube-cicd.svc.cluster.local
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  gateways:
  - dkube/dkube-istio-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /cicd/
    rewrite:
      uri: /
    route:
    - destination:
        host: tekton-dashboard.tekton-pipelines.svc.cluster.local
        port:
          number: 9097
